# schonfeld-ms-primary-surplus

./: .gitignore  DV01_FIX_SUMMARY.md  Fiscal Uncertainty Steepening Strategy.md  Interest-Rate Steepening Risk Metrics Research.md  PROJECT_FLAWS.md  PROJECT_IMPROVEMENTS.md  README.md  RISK_STRATEGY_GEMINI_DEEP.md  STEEPENER_STRATEGY_SUMMARY.md  STRATEGY_REPORT_GEMINI_DEEP.md  STRATEGY_REPORT_GEMINI_WEB.md  STRATEGY_REPORT_KIMI.md  STRATEGY_REPORT_OPUS.md  Trading Brazilian Interest Rate Curves.md  V5_V6_STRATEGY_COMPARISON.md  copom_meetings_cache.json  debug_grep.py  debug_grep2.py  debug_v6_data.py  debug_v6_size.py  epu_cache.csv  fix_linalg.py  focus_primary_cache.csv  ipca_12m_cache.csv  markov_regime_probs_cache.pkl  pyproject.toml  run_v5_backtest.py  test_actual_data.py  test_fallback.py  test_markov.py  v6_backtest_results.pkl  vix_cache.csv
docs/: METHODOLOGY_EVOLUTION.md  README.md  STRATEGY_VERSION_VALIDITY_MATRIX.md  STUDY_LOOKAHEAD_BIAS_AND_FOCUS_STD_DEV.md  findings_2026-03-05.md
notebook/: pca_regimes_v7_cell.py  v5_v6_strategy_comparison.ipynb
scripts/: populate_vix_cache.py
src/: base_strategy.py  markov_regime_analysis.py  steepener_strategy.py  steepener_strategy_v2.py  steepener_strategy_v3.py  steepener_strategy_v4.py  steepener_strategy_v5.py  steepener_strategy_v6.py
src/data/api/b3/: predi.py
src/data/api/calendar/: copom.py  fiscal.py
src/data/api/cdi/: cdi.txt
src/data/api/epu/: epu.py
src/data/api/focus/: ipca.py  primary.py  selic.py
src/data/processed/: pca_regime_full_history.csv
web/: app.py
web/assets/: style.css
(+3708 files in other folders)
