[project]
name = "schonfeld-ms-primary-surplus"
version = "0.1.0"
description = "QR position at Schonfeld - short case study"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dash>=4.0.0",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[tool.setuptools.packages.find]
where = ["src", "web"]
